k8s/frontend-dep.yml

# Frontend Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dep
spec:
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: brendanddev/frontend
        resources:
          requests:
            memory: "120Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
