k8s/mongo-dep.yml
# Mongo Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-dep
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: myapp
        image: <Image>
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 27017
