k8s/mongo.svc.yml
# Mongo Service

apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
spec:
  selector:
    app: myapp
  ports:
  - port: 27017
    targetPort: 27017
